--- a/src/components/app-header/app-header.scss
+++ b/src/components/app-header/app-header.scss
@@ -1,5 +1,7 @@
 .header {
     position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     z-index: 2;
     width: 100%;
@@ -7,7 +9,6 @@
     height: 60px;
     justify-content: flex-start;
     align-items: center;
-    // padding: 0 50px;
     @media (min-width: 320px) {
         padding: 0px 10px;
     }
@@ -15,13 +16,12 @@
     &__link {
         display: flex;
         margin-right: 10px;
-
         color: #fff;
         text-decoration: none;
         line-height: 30px;
         justify-content: center;
         padding: 0px 5px 0px;
-        border-radius: 10%;
+        border-radius: 20px;
         border: 2px solid white;
 
         @media (min-width: 992px) {
@@ -38,7 +38,6 @@
             margin-right: 5px;
         }
         width: 20px;
-        // margin-right: 10px;
         color: #fff;
     }
 }
