--- a/src/components/cart-table/cart-table.scss
+++ b/src/components/cart-table/cart-table.scss
@@ -1,20 +1,59 @@
+.click {
+    color: #fff;
+}
+.cart__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.cart .cart__wrapper {
+}
 .cart {
-    padding-top: 120px;
-    padding-bottom: 50px;
+    position: relative;
+    padding: 120px 50px 50px;
     min-height: 100vh;
     @media (max-width: 768px) {
         padding-top: 70px;
     }
     &__title {
-        @media (max-width: 768px) {
-            font-size: 18px;
+        @media (max-width: 720px) {
+            font-size: 20px;
         }
         font-size: 36px;
         color: #fff;
         text-align: center;
         font-weight: 300;
     }
-    &__list {
+
+    &__back {
+        margin-top: 35px;
+        color: #fff;
+
+        &_btn {
+            display: block;
+            color: #fff;
+            font-size: 25px;
+            text-decoration: none;
+            line-height: 35px;
+            background-color: rgba(15, 22, 121, 0.699);
+            border-radius: 20px;
+            border: 1px solid #fff;
+            text-align: center;
+        }
+        @media (max-width: 720px) {
+            &_btn {
+                font-size: 15px;
+                line-height: 20px;
+            }
+        }
+        span {
+            display: inline-block;
+            padding: 5px;
+        }
+    }
+    &__button:hover &__list {
         max-width: 500px;
         margin: 0 auto;
         padding: 0px 10px;
@@ -24,15 +63,34 @@
         max-height: 100px;
         overflow: hidden;
         margin: 0 auto;
+        @media (min-width: 720px) {
+            margin-left: 80px;
+        }
+        a {
+            @media (min-width: 768px) {
+                cursor: pointer;
+            }
+        }
     }
     &__item {
+        position: relative;
         display: flex;
         flex-direction: column;
         margin-top: 20px;
-
         border: 1px solid rgba(256, 256, 256, 0.2);
         background-color: rgba(0, 0, 0, 0.7);
-        box-shadow: 0 0 20px rgba(256, 256, 256, 0.1);
+        box-shadow: 0 0 20px rgba(256, 256, 256, 0.7);
+        font-size: 20px;
+        @media (max-width: 768px) {
+            font-size: 14px;
+        }
+        @media (max-width: 375px) {
+            padding-top: 20px;
+        }
+        @media (max-width: 720px) {
+            padding: 10px 0px;
+        }
+
         &-title,
         &-price {
             max-width: 250px;
@@ -40,28 +98,92 @@
             color: #fff;
             font-size: 24px;
             margin: 0 auto;
+            user-select: none;
+            font-size: inherit;
+        }
+
+        &-title {
+            @media (max-width: 720px) {
+                margin-top: 10px;
+                font-size: 18px;
+            }
+        }
+        &-title a {
+            color: #fff;
+            text-decoration: none;
+            @media (min-width: 768px) {
+                cursor: pointer;
+            }
+        }
+        &-price {
+            display: block;
+            @media (max-width: 768px) {
+                margin-top: 10px;
+            }
         }
         &-img {
             display: block;
             margin: 0 auto;
             width: 100%;
-            /* height: 125px;
-            width: 250px; */
-            // object-fit: cover;
+        }
+    }
+
+    &__btn-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @media (max-width: 768px) {
+            margin-top: 20px;
+        }
+    }
+    &__btn-quantity:disabled {
+        background-color: rgb(56, 54, 189);
+    }
+    &__btn-quantity {
+        width: 40px;
+        height: 20px;
+        margin: 0 5px;
+        background-color: transparent;
+        border: 1px solid #fff;
+        @media (min-width: 768px) {
+            cursor: pointer;
+        }
+        @media (max-width: 720px) {
+            width: 45px;
+            height: 25px;
+            margin: auto 15px;
+        }
+        &:last-child {
+            transform: rotate(15deg);
+        }
+
+        span {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            color: #fff;
         }
     }
     &__close {
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        text-align: center;
+        top: -10px;
+        right: -10px;
+        color: #fff;
+        font-size: 20px;
+        border: 1px solid #fff;
+        transform: rotate(45deg);
+        user-select: none;
+        span {
+            display: block;
+            transform: rotate(-45deg);
+        }
         @media (min-width: 768px) {
-            position: absolute;
-            width: 25px;
-            height: 25px;
-            text-align: center;
-            top: -10px;
-            right: -10px;
-            color: #fff;
-            font-size: 20px;
-            // border-radius: 100%;
-            border: 1px solid #fff;
             cursor: pointer;
         }
     }
@@ -81,27 +203,102 @@
 .cart__item {
     position: relative;
 }
-.cart__close {
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    text-align: center;
-    top: -10px;
-    right: -10px;
-    color: #fff;
-    font-size: 20px;
-    // border-radius: 100%;
-    border: 1px solid #fff;
-    cursor: pointer;
-}
 
 .cart__item {
-    @media (min-width: 768px) {
+    @media (min-width: 720px) {
         position: relative;
         display: flex;
         flex-direction: row;
 
         justify-content: space-between;
         align-items: center;
+    }
+}
+.cart__btn-main,
+.cart__btn-buy {
+    padding: 5px 5px;
+    color: #fff;
+    background-color: #000;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    animation-name: anim;
+    animation: anim 2s ease-in-out;
+    animation-iteration-count: 1;
+    transform: rotate(35deg);
+    a {
+        color: #fff;
+        text-decoration: none;
+    }
+    @media (min-width: 768px) {
+        cursor: pointer;
+
+        &:hover {
+            background-color: #3836bd;
+        }
+    }
+}
+
+.cart__btn-wrapper.cart__btn-buy {
+    z-index: 2;
+    position: sticky;
+    top: 70px;
+    @media (max-width: 477px) {
+        margin-top: 0;
+        font-size: 10px;
+    }
+}
+
+.cart__btn-wrapper.cart__btn-main {
+    position: relative;
+    animation: none;
+    transform: none;
+    margin: 25px auto 0;
+    width: 150px;
+    height: 50px;
+    a {
+        width: 100%;
+        height: 100%;
+        line-height: 36px;
+    }
+}
+
+@keyframes anim {
+    0% {
+        transform: rotate(0deg);
+    }
+    10% {
+        transform: rotate(45deg);
+    }
+    25% {
+        transform: rotate(5deg);
+    }
+    35% {
+        transform: rotate(40deg);
+    }
+    55% {
+        transform: rotate(10deg);
+    }
+    60% {
+        transform: rotate(15deg);
+    }
+    65% {
+        transform: rotate(35deg);
+    }
+    70% {
+        transform: rotate(20deg);
+    }
+    75% {
+        transform: rotate(30deg);
+    }
+    80% {
+        transform: rotate(35deg);
+    }
+
+    95% {
+        transform: rotate(20deg);
+    }
+
+    100% {
+        transform: rotate(35deg);
     }
 }
